# pysme-wrapper

./: .gitignore  README.md  environment.yaml  pyproject.toml  pysme_wrapper_test.ipynb
src/pysme_wrapper/: core.py  utils.py
